--- a/_posts/2012-12-13-giris.md
+++ b/_posts/2012-12-13-giris.md
@@ -7,4 +7,4 @@ tags: [genel]
 ---
 {% include JB/setup %}
 
-Fırsat buldukça buralarda birşeyler karalamayı planlamaktayım. Baştan bildireyim.
+Fırsat buldukça buralarda birşeyler karalamayı planlamaktayım.
